--- a/views/home.pug
+++ b/views/home.pug
@@ -10,6 +10,15 @@ block breadcrumbs
   //- no breadcrumbs on home page
 
 block main
-  h1= title
+
+  p Welcome to Accessible Telecoms. Use this free service to find independent and up-to-date information on telecommunication products and services that are suitable for seniors and people with disabilities.
+
+  p Please contact us on 
+   a(href="mailto:accessible.telecoms@accan.org.au") accessible.telecoms@accan.org.au
+   |  if you know of some information we could include, or if you feel that the information we have isn’t up to date or correct.
+
+  p Accessible Telecoms has been developed by the
+    a(href="#") Australian Communications Consumer Action Network 
+    |  (ACCAN)
 
 //- EOF
